--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -58,7 +58,24 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-
+function removeTransition(e) {
+    if (e.propertyName !== 'transform') return; //skip it if it's not a transform
+    this.classList.remove('playing'); //removes the class 'playing' from the element that just played
+}
+  
+function playSound(e) {
+  const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`); 
+  const key = document.querySelector(`.key[data-key="${e.keyCode}"]`); 
+  if(!audio) return; //stop the function from running
+  audio.currentTime = 0; //rewind sound file to start when key is clicked
+  audio.play();
+  key.classList.add('playing'); //adds the class 'playing' to the element being played
+};
+  
+const keys = document.querySelectorAll('.key'); //gives array of every element that is matched
+keys.forEach(key => key.addEventListener('transitionend', removeTransition)); //removes transition
+  
+window.addEventListener('keydown', playSound);
 </script>
 
 
